--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: '3.8'
 
 services:
-#  app:
-#    build: .
-#    ports:
-#      - "8000:8000"
-#    environment:
-#      - REDIS_HOST=redis
-#      - REDIS_PORT=6379
-#    depends_on:
-#      - redis
-#    volumes:
-#      - ./src:/app/src  # For development
+  app:
+    build: .
+    ports:
+      - "8000:8000"
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+    depends_on:
+      - redis
+    volumes:
+      - ./src:/app/src  # For development
 
   redis:
     image: redis:7-alpine
