--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "python-multipart>=0.0.6",
     "pydantic-settings>=2.0.0",
     "httpx>=0.27.0",
+    "uvicorn[standard]>=0.23.0",
 ]
 
 [tool.setuptools.packages.find]
