--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "phonebook_api"
+name = "addrex"
 version = "1.0.0"
 description = "API service for storing and managing phone-to-address mappings"
 authors = [{ name = "Developer", email = "dev@example.com" }]
