--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     services:
@@ -33,7 +33,7 @@ jobs:
       run: pip install uv
 
     - name: Install dependencies
-      run: uv pip install -e '.[dev]'
+      run: uv pip install --system -e '.[dev]'
 
     - name: Run tests
       run: pytest
